--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Customer Dashboard</title>
     <base href="/">
     <meta charset="UTF-8">
+    <!-- TODO @wnamen configure the viewport for mobile / desktop viewing -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
 
+
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
@@ -20,6 +24,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+      <cisco-dash-app>Loading, please be patient...</cisco-dash-app>
   </body>
 </html>
