Add SASS compilation to gulp. Update .gitngore. Add Dashboard Stubs. Add Chart JS and draw shim

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-
+    <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
+    <script src="app/assets/javascripts/chartjs-shim.js"></script>
     <script src="systemjs.config.js"></script>
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
