--- a/src/index.html
+++ b/src/index.html
@@ -7,24 +7,36 @@
     <!-- TODO @wnamen configure the viewport for mobile / desktop viewing -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+    <!-- Global / External CSS Files that are not part of the source pipeline or
+    part of the angular specific styles go here. Things like bootstrap, jquery, etc. -->
+    <link rel="stylesheet" href="node_modules/tether/dist/css/tether.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
+
     <link rel="stylesheet" href="styles.css">
+
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
-
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="systemjs.config.js"></script>
+
+    <script src="node_modules/jquery/dist/jquery.min.js"/>
+    <!-- Jquery First -->
+    <script src="node_modules/tether/dist/js/tether.min.js"/>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
     <script src="app/assets/javascripts/chartjs-shim.js"></script>
-    <script src="systemjs.config.js"></script>
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
   </head>
 
   <body>
+      <span class="test-color">abc</span>
+      <!-- Enable bootstrap 4 theme -->
+      <script>window.__theme = 'bs4';</script>
       <cisco-dash-app>Loading, please be patient...</cisco-dash-app>
   </body>
 </html>
