added more modular styling and changed layout

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="node_modules/tether/dist/css/tether.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/dist/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="styles.css">
 
@@ -34,7 +35,6 @@
   </head>
 
   <body>
-      <span class="test-color">abc</span>
       <!-- Enable bootstrap 4 theme -->
       <script>window.__theme = 'bs4';</script>
       <cisco-dash-app>Loading, please be patient...</cisco-dash-app>
