--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <!-- TODO @wnamen configure the viewport for mobile / desktop viewing -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Global CDNS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
     <!-- Global / External CSS Files that are not part of the source pipeline or
     part of the angular specific styles go here. Things like bootstrap, jquery, etc. -->
     <link rel="stylesheet" href="node_modules/tether/dist/css/tether.min.css">
