continued styling in header and added new font

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
     <!-- Global CDNS -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900" rel="stylesheet">
 
     <!-- Global / External CSS Files that are not part of the source pipeline or
     part of the angular specific styles go here. Things like bootstrap, jquery, etc. -->
