Add bg image from photoshop

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="node_modules/tether/dist/css/tether.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/dist/css/font-awesome.min.css">
+
+    <!-- Font Awesome Styles -->
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="styles.css">
 
