began brick js integration

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Global CDNS -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900" rel="stylesheet">
 
     <!-- Global / External CSS Files that are not part of the source pipeline or
@@ -32,7 +31,7 @@
     <!-- Jquery First -->
     <script src="node_modules/tether/dist/js/tether.min.js"/>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="node_modules/bricks.js/dist/bricks.js"></script>
     <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
     <script src="app/assets/javascripts/chartjs-shim.js"></script>
     <script>
