--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
+    <!-- <script src="node_modules/chart.js/src/chart.js"></script> -->
     <script src="app/assets/javascripts/chartjs-shim.js"></script>
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
