resolved background color issues and began styling charts

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="background-linen">
       <!-- Enable bootstrap 4 theme -->
       <script>window.__theme = 'bs4';</script>
       <cisco-dash-app>Loading, please be patient...</cisco-dash-app>
