Document windows build and start process with new auth service. Fix some minor auth issues

--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="systemjs.config.js"></script>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"/>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <!-- Jquery First -->
-    <script src="node_modules/tether/dist/js/tether.min.js"/>
+    <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
