--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,20 @@
     <!-- <script src="node_modules/chart.js/src/chart.js"></script> -->
     <script src="app/assets/javascripts/chartjs-shim.js"></script>
     <script>
+    console.log("PASSIVE!");
+    // WILL throw violation
+    document.addEventListener("touchstart", function(e) {
+      e.preventDefault(); // prevents default browser functionality
+    });
+
+    // will NOT throw violation
+    document.addEventListener("touchmove", function(e) {
+      e.preventDefault(); // does nothing since the listener is passive
+    }, {
+      passive: true
+    });
+    </script>
+    <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
   </head>
