--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
 
+
     <!-- Font Awesome Styles -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 
@@ -27,28 +28,14 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="systemjs.config.js"></script>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <!-- Jquery First -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/masonry-layout/dist/masonry.pkgd.min.js"></script>
 
     <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
-    <!-- <script src="node_modules/chart.js/src/chart.js"></script> -->
     <script src="app/assets/javascripts/chartjs-shim.js"></script>
-    <script>
-    console.log("PASSIVE!");
-    // WILL throw violation
-    document.addEventListener("touchstart", function(e) {
-      e.preventDefault(); // prevents default browser functionality
-    });
-
-    // will NOT throw violation
-    document.addEventListener("touchmove", function(e) {
-      e.preventDefault(); // does nothing since the listener is passive
-    }, {
-      passive: true
-    });
-    </script>
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
