Initial trial of clients actual data in our customer datafile format.

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <script src="node_modules/masonry-layout/dist/masonry.pkgd.min.js"></script>
 
     <script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
-    <script src="app/assets/javascripts/chartjs-shim.js"></script>
+    <!-- <script src="app/assets/javascripts/chartjs-shim.js"></script> -->
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
